--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<section id="boxes">
 		<div class="container">
 			<div class="box box1">
-				<img src="gs://aaaa-6af4b.appspot.com/A0.png" height="150" width="150">
+				<img src="./Me/A0.png" height="150" width="150">
 				<h3>Classics</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua.</p>
