--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keyword" content="Derek, life of Derek, how to be Derek">
 	<meta name="author" content="Derek Donkor">
 	<title>Derek Donkor | Welcome</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles/style.css">
 
 	<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-auth.js"></script>
@@ -71,7 +71,7 @@
 	<section id="boxes">
 		<div class="container">
 			<div class="box box1">
-				<img src="./Me/A0.png" height="150" width="150">
+				<img src="Me/A0.png" height="150" width="150">
 				<h3>Classics</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua.</p>
